--- a/simulation.tex
+++ b/simulation.tex
@@ -1,4 +1,5 @@
 \section{Event-driven Burst Buffer Simulator}
+\label{Sec:Simulation}
 
 We develop an event-driven simulator for burst buffer enabled HPC system, named \textbf{BBSim},
 from scratch in Python to mimic Cerberus scheduling Trinity.
@@ -31,6 +32,13 @@ whenever system resources are released:
                 its burst buffer nodes are released.
 \end{itemize}
 
+\begin{figure}[!t]
+\centering
+        \includegraphics[width=3.6in]{3PhaseJobFSM}
+        \caption{Finite State Machine of Scheduling Simulation}
+\label{Fig:JobFSM}
+\end{figure}
+
 Notice that resource can only be released when certain phase is finished.
 Therefore, any \textit{dispatch} event, caused by \texttt{schedule()} action, actually happens
 at the meanwhile of a certain \textit{finish} event.
@@ -49,11 +57,4 @@ $BW_{x\_to\_y}$ stands for the bandwidth between $x$ and $y$.
 Though target on burst buffer system, BBSim also supports simulating non-BB HPC system.
 Besides, it is not coupled with Cerberus but easy to simulating many other scheduler.
 Both can be proved by the following experiments for various schedulers.
-
-\begin{figure}[!t]
-\centering
-        \includegraphics[width=3.8in]{3PhaseJobFSM}
-        \caption{Finite State Machine of Scheduling Simulation}
-\label{Fig:JobFSM}
-\end{figure}
 
