--- a/model.tex
+++ b/model.tex
@@ -1,33 +1,33 @@
 \section{Model for HPC Jobs on BB-Enabled System}
 \label{Sec:Model}
 
-\begin{table}[!t] 
-        \renewcommand{\arraystretch}{1.3}
-        \caption{Summary of Symbols}
-        \label{Tab:Symbols}
-        \centering
-        \begin{tabular}{l|l}
-                \hline
-                $CN$ & number of total compute nodes \\
-                $BB$ & amount of total burst buffer nodes \\
-                $CN_{available}$ & number of available compute nodes \\
-                $BB_{available}$ & amount of available burst buffer nodes \\
-                $c_i$ & compute node demand of $job_i$ \\
-                $bb\_in_i$ & burst buffer demand of $job_i$ at \textit{stage-in} phase \\
-                $bb\_run_i$ & burst buffer demand of $job_i$ at \textit{running} phase \\
-                $bb\_out_i$ & burst buffer demand of $job_i$ at \textit{stage-out} phase \\
-                $rt_i$ & running time of $job_i$ \\
-                $ert_i$ & estimated or expected running time of $job_i$ \\
-                $Q_I, Q_R, Q_O$ & queues for \textit{stage-in, running, stage-out} phase \\
-                $J_{Q_I}, J_{Q_R}, J_{Q_O}$ & set of jobs in corresponding queue \\
-                $S$ & set of jobs selected by scheduler \\
-                $v_i$ & value of $job_i \in J_{Q_R}$ defined by Equation~\ref{Equ:DefValue}\\
-                $dp(\cdot)$ & memo used in dynamic programming \\
-                $TS_{s\_x}$ & event timestamps of starting phase $x$ in simulation \\
-                $TS_{f\_x}$ & event timestamps of finishing phase $x$ in simulation \\
-                \hline
-        \end{tabular}
-\end{table}
+%\begin{table}[!t] 
+        %\renewcommand{\arraystretch}{1.3}
+        %\caption{Summary of Symbols}
+        %\label{Tab:Symbols}
+        %\centering
+        %\begin{tabular}{l|l}
+                %\hline
+                %$CN$ & number of total compute nodes \\
+                %$BB$ & amount of total burst buffer nodes \\
+                %$CN_{available}$ & number of available compute nodes \\
+                %$BB_{available}$ & amount of available burst buffer nodes \\
+                %$c_i$ & compute node demand of $job_i$ \\
+                %$bb\_in_i$ & burst buffer demand of $job_i$ at \textit{stage-in} phase \\
+                %$bb\_run_i$ & burst buffer demand of $job_i$ at \textit{running} phase \\
+                %$bb\_out_i$ & burst buffer demand of $job_i$ at \textit{stage-out} phase \\
+                %$rt_i$ & running time of $job_i$ \\
+                %$ert_i$ & estimated or expected running time of $job_i$ \\
+                %$Q_I, Q_R, Q_O$ & queues for \textit{stage-in, running, stage-out} phase \\
+                %$J_{Q_I}, J_{Q_R}, J_{Q_O}$ & set of jobs in corresponding queue \\
+                %$S$ & set of jobs selected by scheduler \\
+                %$v_i$ & value of $job_i \in J_{Q_R}$ defined by Equation~\ref{Equ:DefValue}\\
+                %$dp(\cdot)$ & memo used in dynamic programming \\
+                %$TS_{s\_x}$ & event timestamps of starting phase $x$ in simulation \\
+                %$TS_{f\_x}$ & event timestamps of finishing phase $x$ in simulation \\
+                %\hline
+        %\end{tabular}
+%\end{table}
 
 \subsection{System Resources}
 The system contains resources like compute node, main memory, burst buffer and IO node.
@@ -37,11 +37,11 @@ Therefore, the schedule targets are modeled as compute node and burst buffer.
 We consider a system with $CN$ compute nodes and $BB$ GB of burst buffer.
 Burst buffer are able to be shared by applications with any fraction of total amount.
 Later we will see that when doing optimal scheduling, we may need to allocate by a fixed
-fraction of the total resources(number of compute nodes or amount of burst buffer).
+fraction of the total resources (number of compute nodes or amount of burst buffer).
 
 \subsection{Three-Phase Model for HPC Jobs}
 Users request the system to run their applications as jobs.
-We define $J = (job_1, job_2,..., job_n)$ to be the set of all unfinished jobs in the system.
+We define $J = (job_1, job_2, \ldots, job_n)$ to be the set of all unfinished jobs in the system.
 To fully utilizing burst buffer, we divide jobs into 3 different phases.
 In the first phases, input data are staged in from IO nodes to burst buffer.
 We refer this phase as \textit{stage-in} phase.
