--- a/model.tex
+++ b/model.tex
@@ -30,73 +30,140 @@
 %\end{table}
 
 \subsection{System Resources}
-The system contains resources like compute nodes, main memory, burst buffer,
-IO nodes and external storage.
-In most system architecture, compute nodes are coupled with main memory.
-Since storage capacity at most time is sufficient, we assume IO nodes are always available.
-The schedule targets are compute node and burst buffer:
-a system with $CN$ compute nodes and $BB$ GB of burst buffer.
-BB are able to be shared by applications with any fractional amount.
+% The system contains resources like compute nodes, main memory, burst buffer,
+% IO nodes and external storage.
+% In most system architecture, compute nodes are coupled with main memory.
+% Since storage capacity at most time is sufficient, we assume IO nodes are always available.
+% The schedule targets are compute node and burst buffer:
+% a system with $CN$ compute nodes and $BB$ GB of burst buffer.
+% BB are able to be shared by applications with any fractional amount.
+
+%============XY==========
+Users specify the required number of compute nodes and expected runtime for their jobs upon submission. 
+With such information about jobs' requirement, 
+batch scheduler makes scheduling decision for each job with objectives 
+such as minimizing job wait time and maximizing system throughput. 
+In our scheduling framework, 
+burst buffer is considered as a new kind of resource that users can request upon job submission. 
+Therefore, the system resource that scheduler targets for making scheduling decision are compute node, 
+burst buffer and expected runtime. 
+The burst buffer enabled system considered in our framework consists of 
+$CN$ compute nodes and $BB$ GB of burst buffer. 
+Users can require any fractional amount of burst buffer for their jobs. 
+
+
 
 \subsection{Three-Phase Model for HPC Jobs}
-Users request the system to run their applications as jobs.
-We define $J = (job_1, job_2, \ldots, job_n)$ to be the set of all unfinished jobs in the system.
-To fully utilizing burst buffer, we divide jobs into 3 different phases.
-In the first phases, input data are staged in from IO nodes to burst buffer.
-We refer this phase as \textit{stage-in} phase.
-It is very easy for user to provide the amount of input data
-because they should already be available before application execution. 
-Then the job can run on the compute nodes after being scheduled;
-except reading data from burst buffer, there may be interaction between 
-computer node and burst buffer.
-These interactions are mainly due to fault tolerance reasons, like check-pointing.
-This phase is called \textit{running} phase.
-When computation is done, output data needs to be staged out to external PFS from memory,
-namely \textit{stage-out} phase.
-Burst buffer plays as an efficient IO broker for compute nodes,
-in replacing of traditional IO nodes.
+% Users request the system to run their applications as jobs.
+% We define $J = (job_1, job_2, \ldots, job_n)$ to be the set of all unfinished jobs in the system.
+% To fully utilizing burst buffer, we divide jobs into 3 different phases.
+% In the first phases, input data are staged in from IO nodes to burst buffer.
+% We refer this phase as \textit{stage-in} phase.
+% It is very easy for user to provide the amount of input data
+% because they should already be available before application execution. 
+% Then the job can run on the compute nodes after being scheduled;
+% except reading data from burst buffer, there may be interaction between 
+% computer node and burst buffer.
+% These interactions are mainly due to fault tolerance reasons, like check-pointing.
+% This phase is called \textit{running} phase.
+% When computation is done, output data needs to be staged out to external PFS from memory,
+% namely \textit{stage-out} phase.
+% Burst buffer plays as an efficient IO broker for compute nodes,
+% in replacing of traditional IO nodes.
+
+
+%=============Xu======================
+As the aforementioned discussion in section~\ref{Sec:Background}, jobs could utilize burst buffer to pre-fetch data from external storage before running. When jobs start running on compute nodes, they could burst the checkpoint data to burst buffer at high speed. Upton jobs completion, their data could be staged out to burst buffer, and then drained out to external storage, for the purpose of earlier releasing of compute node. According to these scenarios, the job lifetime is divided up to three different phases in our scheduling framework.
+
+\begin{itemize}
+ \item \textbf{Stage-In}. After the job being submitted to the system, it needs to pre-fetch data, such as configuration files and input data, from IO nodes to burst buffer. We refer this phase as \textit{stage-in}. The only resource needed by the job in this phase is burst buffer. Users are encouraged to specify the amount of burst buffer required in the \textit{stage-in} phase. When the data is pre-fetched into burst buffer, the job is ready to run.
+ 
+ \item \textbf{Running}. The scheduler will allocate the job with required number of compute nodes and the amount of burst buffer and dispatch the job to the system for running. This is referred as \textit{running} phase. During the running phase, there could be frequent data exchange between compute node and burst buffer. These interactions are mainly due to fault tolerance reasons, like check-pointing. 
+ 
+ \item \textbf{Stage-out}. When the job finishes computation and exit the \textit{running} phase, its output data needs to be drained out to external storage from the on-node memory. We refer this as \textit{stage-out} phase. The job can release its compute nodes when the output data is staged out into burst buffer at high speed. The burst buffer plays as an efficient IO broker for the compute nodes and drain the output data out to the external storage.
+ 
+\end{itemize}
+
+We can observed that burst buffer has been utilized during all three phases, while compute nodes are only required during the \textit{running} phase. 
+
 
 \subsection{Three-Phase Resource Demand}
-Users typically provide their resource demand for their jobs.
-This is the most important information scheduler could get from the users.
-Therefore, each job is associated with a demand vector in the form of $(c, rt)$
+% Users typically provide their resource demand for their jobs.
+% This is the most important information scheduler could get from the users.
+% Therefore, each job is associated with a demand vector in the form of $(c, rt)$
+% where $c$ is the number of needed compute node in running phase,
+% $rt$ is the requested runtime user can provide to help scheduler make decisions.
+% To be burst buffer aware, demand vector should be augmented
+% with fields defining user's request for burst buffer capacity.
+% We consider two possible ways to do so.
+% Corresponding to the typical usage cases of burst buffer,
+% user may provide a \textit{burst buffer triple} in the form of $(bb\_in, bb\_run, bb\_out)$,
+% where $bb\_in$ is the volume of burst buffer user predicted for staging in data files,
+% $bb\_run$ is the volume of burst buffer user preferred for checkpointing during running,
+% $bb\_out$ is the volume of burst buffer needed to hold the resulting output data.
+% A job that providing demand vector augmented with
+% burst buffer triple is called a \textit{3-phase modeled job}.
+% Alternatively, a lazy user may just use the $\max\{bb\_in, bb\_run, bb\_out\}$ at every stage.
+% %We do not make any assumption about $bb\_run$ and $bb\_out$
+% %because it is nontrivial to predict them, both for system scheduler and application owner.
+% We refer this augmentation as
+% \textit{1-phase modeled jobs} thereafter.
+
+%=========XY===============
+Jobs are submitted to system with specified resource demand from users. 
+Each job is associated with a demand vector in the form of $(c, rt)$, 
 where $c$ is the number of needed compute node in running phase,
-$rt$ is the requested runtime user can provide to help scheduler make decisions.
-To be burst buffer aware, demand vector should be augmented
+$rt$ is the expected runtime. 
+In a burst buffer enabled system, demand vector should be augmented
 with fields defining user's request for burst buffer capacity.
-We consider two possible ways to do so.
-Corresponding to the typical usage cases of burst buffer,
-user may provide a \textit{burst buffer triple} in the form of $(bb\_in, bb\_run, bb\_out)$,
+We consider two possible ways that users provide burst buffer demand.
+For the user with accurate speculation about his jobs burst buffer consumption during each of three phases,
+he may provide a \textit{burst buffer triple} in the form of $(bb\_in, bb\_run, bb\_out)$,
 where $bb\_in$ is the volume of burst buffer user predicted for staging in data files,
 $bb\_run$ is the volume of burst buffer user preferred for checkpointing during running,
 $bb\_out$ is the volume of burst buffer needed to hold the resulting output data.
-A job that providing demand vector augmented with
-burst buffer triple is called a \textit{3-phase modeled job}.
-Alternatively, a lazy user may just use the $\max\{bb\_in, bb\_run, bb\_out\}$ at every stage.
-%We do not make any assumption about $bb\_run$ and $bb\_out$
-%because it is nontrivial to predict them, both for system scheduler and application owner.
-We refer this augmentation as
-\textit{1-phase modeled jobs} thereafter.
+% A job that providing demand vector augmented with
+% burst buffer triple is called a \textit{3-phase modeled job}.
+We will show that providing jobs burst buffer demand in the form of \textit{burst buffer triple} 
+will yield great benefit in the following section.
+Alternatively, a user may just use the $\max\{bb\_in, bb\_run, bb\_out\}$ 
+as job's burst buffer demand in every phase. 
+% We refer this augmentation as
+% \textit{1-phase modeled jobs} thereafter.
 
-The tightly coupling between processing cores and memory makes 3-phase model
-more complicated than it appears in terms of resource releasing.
-For a job at the stage-in phase, compute nodes is not allocated to it yet
-but that will not effect staging in data.
-When scheduler allocate compute nodes (coupled with memory) to a job,
-these nodes are exclusively used by this job.
-The first thing to do in running phase is fetching in data from burst buffer to memory,
-which is not available until compute nodes is allocated to job.
-We refer this sub-phase as \textit{fectch-in} phase.
-$bb\_in$ will be hold by job until \textit{fetch-in} phase finished.
-Even if the computation is done when job exit \textit{running phase},
-compute nodes cannot be released until job enters \textit{stage-out} phase 
-\textbf{and} output data are drained out to burst buffer from memory,
-referred as \textit{drain-out} phase.
-However, $bb\_run$ can be immediately reclaimed at the end of \textit{running phase}.
-Once \textit{drain-out} phase is done,
-compute nodes become available for jobs waiting to be run
-because staging output data out to IO node is the business of burst buffer nodes,
-sometimes with the help from traditional IO nodes.
-Burst buffer nodes used for caching output data can thus be put back for reuse
-when \textit{stage-out} phase, as well as the entire lifetime of job, concludes.
+% The tightly coupling between processing cores and memory makes 3-phase model
+% more complicated than it appears in terms of resource releasing.
+% For a job at the stage-in phase, compute nodes is not allocated to it yet
+% but that will not effect staging in data.
+% When scheduler allocate compute nodes (coupled with memory) to a job,
+% these nodes are exclusively used by this job.
+% The first thing to do in running phase is fetching in data from burst buffer to memory,
+% which is not available until compute nodes is allocated to job.
+% We refer this sub-phase as \textit{fectch-in} phase.
+% $bb\_in$ will be hold by job until \textit{fetch-in} phase finished.
+% Even if the computation is done when job exit \textit{running phase},
+% compute nodes cannot be released until job enters \textit{stage-out} phase 
+% \textbf{and} output data are drained out to burst buffer from memory,
+% referred as \textit{drain-out} phase.
+% However, $bb\_run$ can be immediately reclaimed at the end of \textit{running phase}.
+% Once \textit{drain-out} phase is done,
+% compute nodes become available for jobs waiting to be run
+% because staging output data out to IO node is the business of burst buffer nodes,
+% sometimes with the help from traditional IO nodes.
+% Burst buffer nodes used for caching output data can thus be put back for reuse
+% when \textit{stage-out} phase, as well as the entire lifetime of job, concludes.
 
+
+%==========XY=====================
+The resource releasing for the 3-phase modeled jobs are complicated than it used to be. 
+For a job at \texit{stage-in} phase, compute nodes is not allocated to it yet. 
+The job can stage in data from IO nodes to burst buffer without the involvement of compute nodes.
+When scheduler allocates compute nodes to the job, the job enters the \texit{running} phase 
+and starts to read the pre-fetched data from burst buffer into the main memory, 
+$bb\_in$ will be released after all the data are moved into main memory. 
+When the job finishes computation and exits \textit{running} phase, 
+$bb\_run$ are released while compute nodes are still hold by the job. 
+The compute nodes will be released after all the output data are moved into $bb\_out$ burst buffer from main memory.
+The job enters \textit{stage-out} phase and only holds $bb\_out$ burst buffer. 
+Once all the output data are drained out to the external storage,  
+$bb\_out$ can be released. 
