pass on section 5

--- a/ref.bib
+++ b/ref.bib
@@ -36,6 +36,18 @@
         howpublished = "\url{https://www.nersc.gov/assets/Trinity--NERSC-8-RFP/Documents/trinity-NERSC8-use-case-v1.2a.pdf}",
 }
 
+@ARTICLE{tsafrir-tpds-2007, 
+author={D. Tsafrir and Y. Etsion and D. G. Feitelson}, 
+journal={IEEE Transactions on Parallel and Distributed Systems}, 
+title={Backfilling Using System-Generated Predictions Rather than User Runtime Estimates}, 
+year={2007}, 
+volume={18}, 
+number={6}, 
+pages={789-803}, 
+keywords={parallel machines;processor scheduling;EASY scheduler;backfilling algorithm;first come first serve order;parallel job scheduling algorithm;supercomputers;system-generated prediction;user runtime estimates;Accuracy;Delay effects;Dynamic scheduling;History;Job production systems;Measurement;Processor scheduling;Runtime;Scheduling algorithm;Supercomputers;EASY;EASY++;Parallel job scheduling;SJBF.;backfilling;dynamic prediction correction;history-based predictions;performance metrics;runtime estimates;system-generated predictions}, 
+doi={10.1109/TPDS.2007.70606}, 
+ISSN={1045-9219}, 
+month={June},}
 
 @TECHREPORT{TrinitySystem,
         title = {{Trinity Platform Introduction and Usage Model}},
